# ARKLAND-Multi

./: .gitignore  ARKLAND-Multi.spec  ARKLAND-Updater.spec  CHANGELOG.md  PENDING_ISSUES.md  README.md  _fix_imports.py  _migrate_arkshop.py  _profile_tabs.py  _release.ps1  _tmp_game_tab.py  _tmp_game_tab.txt  arkland_updater.py  beacon_explore.py  beacon_explore2.py  beacon_sync.py  build.bat  build_err.txt  build_log.txt  fix_mojibake.py  main.py  out_audit.txt  release_log.txt  requirements.txt  scan_output.txt  setup.iss  version.json
.nexus-sync/: conversation.json
plugin/CustomShop/: CMakeLists.txt  CustomShop.vcxproj  README.md  build_cl.bat  vcpkg.json
plugin/CustomShop/configs/: PluginInfo.json  config.json
plugin/CustomShop/mariadb/lib/: libmariadb.lib
plugin/CustomShop/mysql/lib/: libmysql.lib
plugin/CustomShop/src/: Commands.cpp  Commands.h  Main.cpp  ShopBridge.cpp  ShopBridge.h  ShopConfig.cpp  ShopConfig.h  ShopData.cpp  ShopData.h  ShopPerms.cpp  ShopPerms.h  ShopPoints.cpp  ShopPoints.h  ShopStore.cpp  ShopStore.h  ShopVip.cpp  ShopVip.h  TimedPoints.cpp  TimedPoints.h  mysql.h  pch.h
src/: app.py  ark_ini.py  arkshop_manager.py  backup_manager.py  battlemetrics_client.py  beacon_client.py  breeding_calculator.py  buff_manager.py  change_logger.py  config_manager.py  discord_notifier.py  dynamic_config_server.py  mod_auto_updater.py  mod_manager.py  plugin_manager.py  rcon_client.py  remote_agent.py  server_config.py  server_manager.py  sync_engine.py  ui_constants.py  updater.py  version.py
src/dialogs/: __init__.py  add_server_dialog.py  clone_config_dialog.py  create_buff_dialog.py  mod_ini_dialog.py  mod_search_dialog.py  open_presets_manager.py  remote_control_dialog.py  sync_ini_dialog.py
src/pages/: __init__.py  add_admin_id.py  add_mod.py  add_sync_cycle.py  add_sync_folder.py  auto_start_dynamic_configs.py  auto_start_sync.py  broadcast_add.py  broadcast_delete.py  broadcast_edit.py  broadcast_rcon.py  broadcast_refresh_list.py  broadcast_render_row.py  broadcast_send_quick.py  broadcast_test.py  buff_countdown_tick.py  build_about.py  build_active_buff_card.py  build_auto_update_panel.py  build_buffs_panel.py  build_clusters_panel.py  build_config_search_bar.py  build_dashboard.py  build_history_row.py  build_player_row.py  build_preset_chip.py  build_scheduled_buff_row.py  build_server_card.py  build_tab_logs.py  (+142 more)
tools/: project_audit.py
(+3 files in other folders)
